--- a/assets/style.css
+++ b/assets/style.css
@@ -135,7 +135,7 @@ body {
 
 
 .hero-section {
-    background: url('/assets/images/hero.png') no-repeat center;
+    background: url('./assets/images/hero.png') no-repeat center;
     background-size: cover;
     height: 100vh;
     display: flex;
